# django-forum-api

./: .editorconfig  .gitignore  .gitlab-ci.yml  Pipfile  Readme.md  db.sqlite3  pyproject.toml  requirements.txt
.circleci/: config.yml
api/v1/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
api/v1/accounts/migrations/: 0001_initial.py  0002_alter_customuser_managers.py
api/v1/forum/: admin.py  apps.py  models.py  paginations.py  serializers.py  tests.py  urls.py  views.py
api/v1/forum/migrations/: 0001_initial.py
api/v1/forum/tests/:  conftest.py  test_questions.py
core/: permissions.py  settings.py  urls.py
